fix(master): fix viewport overflow

--- a/projeto01/styles/index.css
+++ b/projeto01/styles/index.css
@@ -50,6 +50,10 @@ html, body{
     overflow-y: auto;
 }
 
+body{
+    max-width: 100vw;
+}
+
 
 p{
     margin: 0;
