--- a/projeto01/styles/mobile/footer.css
+++ b/projeto01/styles/mobile/footer.css
@@ -8,7 +8,7 @@ footer{
 }
 
 footer .footer-container{
-    margin: 0 2vw;
+    margin: 0vh 0vw;
     display: flex;
     flex-direction: row;
     justify-content: center;
