--- a/projeto01/styles/mobile/header.css
+++ b/projeto01/styles/mobile/header.css
@@ -1,5 +1,7 @@
 header{
     height: 7.5vh;
+    padding: 0%;
+    margin: 0%;
 }
 
 /* Definindo a navbar  */
@@ -7,6 +9,8 @@ header nav{
     z-index: 1; /*Deixar acima da tela */
     position: fixed;
     top: 0;
+    padding: 0%;
+    margin: 0%;
     width: 100%;
     height: 7.5vh; 
     background-color: #2571B7;
